2005-11-28  Sven Panne  <sven.panne@aedion.de>

	* test_suite\Makefile.am: Distribute example sounds, too.

	* admin/RPM/freealut.spec: Updated build dependencies.

2005-11-27  Sven Panne  <sven.panne@aedion.de>

	* src/alutCodec.c, src/alutLoader.c, src/alutWaveform.c: Re-indented.

	* Makefile.am, README, configure.ac: Rearranged the admin subdirectory a
	little bit, making it hopefully clearer which files belong to which
	build system.

	* admin/RPM/freealut.spec, admin/autotools/.cvsignore,
	admin/autotools/.indent.pro, admin/autotools/m4/alut_c__attribute.m4,
	admin/autotools/m4/alut_check_cflags_wall.m4,
	admin/autotools/m4/alut_check_flag.m4,
	admin/autotools/m4/alut_check_func.m4,
	admin/autotools/m4/alut_eval_stderr.m4: Added.

	* admin/.cvsignore, admin/.indent.pro, admin/freealut.spec,
	admin/m4/alut_c__attribute.m4, admin/m4/alut_check_cflags_wall.m4,
	admin/m4/alut_check_flag.m4, admin/m4/alut_check_func.m4,
	admin/m4/alut_eval_stderr.m4: Removed.

	* src/alutBufferData.c, src/alutCodec.c, src/alutInputStream.c,
	src/alutInternal.h, src/alutLoader.c, src/alutWaveform.c: Consistently
	use size_t for sizes internally, because ALsizei is signed and we don't
	want to lose a bit (2GB vs. 4GB limits).

	* admin/VisualStudioDotNET/.cvsignore,
	admin/VisualStudioDotNET/alut.sln,
	admin/VisualStudioDotNET/alut/.cvsignore,
	admin/VisualStudioDotNET/alut/alut.vcproj,
	admin/VisualStudioDotNET/hello_world/.cvsignore,
	admin/VisualStudioDotNET/hello_world/hello_world.vcproj,
	admin/VisualStudioDotNET/playfile/.cvsignore,
	admin/VisualStudioDotNET/playfile/playfile.vcproj: Added. The structure
	is now similar to the Visual Studio 6 directory and the
	solution/projects are now usable with older versions of Visual Studio
	.NET.

	* admin/alut.sln, admin/alut.vcproj, admin/hello_world.vcproj,
	admin/playfile.vcproj: Removed.

	* admin/VisualStudio6/.cvsignore, admin/VisualStudio6/alut.dsw,
	admin/VisualStudio6/alut/.cvsignore, admin/VisualStudio6/alut/alut.dsp,